<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    tools:context=".MainMenuActivity">

    <com.example.rects.ui.view.PuzzleMarkView
        android:id="@+id/puzzleMark"
        android:layout_width="200dp"
        android:layout_height="112dp"
        android:contentDescription="@string/menu_logo_description"
        app:layout_constraintBottom_toTopOf="@id/menuTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/menuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:letterSpacing="0.12"
        android:text="@string/menu_title"
        android:textColor="@color/menu_text_primary"
        android:textSize="44sp"
        app:layout_constraintBottom_toTopOf="@id/menuSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/puzzleMark" />

    <TextView
        android:id="@+id/menuSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/menu_subtitle"
        android:textColor="@color/menu_text_secondary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/menuActions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuTitle" />

    <LinearLayout
        android:id="@+id/menuActions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/menuSubtitle"
        app:layout_constraintWidth_max="340dp">

        <Button
            android:id="@+id/startGameButton"
            style="@style/MenuPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:onClick="onClickSelectLevel"
            android:text="@string/start_game" />

        <Button
            android:id="@+id/startHowToPlayButton"
            style="@style/MenuSecondaryButton"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="14dp"
            android:onClick="onClickHowToPlay"
            android:text="@string/how_to_play" />
    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:textColor="@color/menu_text_muted"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="v0.1.8.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
